@@ -3,43 +3,41 @@ package by.klimov.json_type_adapter.factory.impl;
 import by.klimov.json_type_adapter.BaseTypeAdapter;
 import by.klimov.json_type_adapter.BooleanTypeAdapter;
 import by.klimov.json_type_adapter.DoubleTypeAdapter;
-import by.klimov.json_type_adapter.ListTypeAdapter;
 import by.klimov.json_type_adapter.LocalDateTypeAdapter;
 import by.klimov.json_type_adapter.MapTypeAdapter;
 import by.klimov.json_type_adapter.NullTypeAdapter;
 import by.klimov.json_type_adapter.ObjectTypeAdapter;
 import by.klimov.json_type_adapter.StringTypeAdapter;
 import by.klimov.json_type_adapter.UuidTypeAdapter;
-import by.klimov.json_type_adapter.ZonedDateTimeTypeAdapter;
 import by.klimov.json_type_adapter.factory.TypeAdapterFactory;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 public class TypeAdapterFactoryImpl implements TypeAdapterFactory {
 
-  private final List<BaseTypeAdapter> typeAdapters;
+  private final List<BaseTypeAdapter> typeAdapters =
+      List.of(
+          new BooleanTypeAdapter(),
+          new DoubleTypeAdapter(),
+          new UuidTypeAdapter(),
+          new StringTypeAdapter(),
+          new LocalDateTypeAdapter(),
+          //            new ZonedDateTimeTypeAdapter(),
+          //            new ListTypeAdapter(),
+          new MapTypeAdapter());
 
-  public TypeAdapterFactoryImpl() {
-    this.typeAdapters = new ArrayList<>();
-    typeAdapters.addAll(
-        Arrays.asList(
-            new BooleanTypeAdapter(),
-            new DoubleTypeAdapter(),
-            new UuidTypeAdapter(),
-            new StringTypeAdapter(),
-            new LocalDateTypeAdapter(),
-            new ZonedDateTimeTypeAdapter(),
-            new ListTypeAdapter(),
-            new MapTypeAdapter()));
+  private final List<BaseTypeAdapter> valueTypeAdapters = List.of(new NullTypeAdapter());
+
+  @Override
+  public BaseTypeAdapter getTypeAdapter(String value, Class<?> tClass) {
+    return Objects.isNull(tClass) || value.isEmpty() || value.isBlank()
+        ? new NullTypeAdapter()
+        : getBaseTypeAdapter(value, tClass);
   }
 
   @Override
-  public BaseTypeAdapter getTypeAdapter(String value) {
-    return Objects.isNull(value) || value.isEmpty() || value.isBlank()
-        ? new NullTypeAdapter()
-        : getBaseTypeAdapter(value);
+  public BaseTypeAdapter getTypeAdapter(Class<?> tClass) {
+    return Objects.isNull(tClass) ? new NullTypeAdapter() : getBaseTypeAdapter(tClass);
   }
 
   @Override
@@ -47,18 +45,29 @@ public class TypeAdapterFactoryImpl implements TypeAdapterFactory {
     return Objects.isNull(object) ? new NullTypeAdapter() : getBaseTypeAdapter(object);
   }
 
-  private BaseTypeAdapter getBaseTypeAdapter(String value) {
-    return typeAdapters.stream()
-        .filter(typeAdapter -> !(typeAdapter instanceof StringTypeAdapter))
-        .filter(typeAdapter -> typeAdapter.isAssignable(value))
-        .findFirst()
-        .orElse(new StringTypeAdapter());
-  }
-
   private <T> BaseTypeAdapter getBaseTypeAdapter(T object) {
     return typeAdapters.stream()
         .filter(typeAdapter -> typeAdapter.isAssignable(object))
         .findFirst()
         .orElse(new ObjectTypeAdapter());
+  }
+
+  private BaseTypeAdapter getBaseTypeAdapter(Class<?> tClass) {
+    return typeAdapters.stream()
+        .filter(typeAdapter -> typeAdapter.isAssignable(tClass))
+        .findFirst()
+        .orElseThrow();
+  }
+
+  private BaseTypeAdapter getBaseTypeAdapter(String value, Class<?> tClass) {
+    return typeAdapters.stream()
+        .filter(typeAdapter -> typeAdapter.isAssignable(tClass))
+        .findFirst()
+        .orElseGet(() -> getBaseTypeAdapter(value));
+  }
+
+  private BaseTypeAdapter getBaseTypeAdapter(String value) {
+    BaseTypeAdapter nullTypeAdapter = new NullTypeAdapter();
+    return nullTypeAdapter.isAssignable(value) ? nullTypeAdapter : new ObjectTypeAdapter();
   }
 }
